# vx-equipment-check

./: .dockerignore  .gitignore  .windsurfrules  AGENTS.md  Dockerfile  PROJECT_INFO.md  README.md  README_EQUIPMENT_CHECK.md  README_MIGAS_STYLED.md  README_SCROLL.md  build-linux.sh  build_executable.py  create_deb.sh  demo.py  docker-build.sh  ejemplo_migas_reporte.json  ejemplo_reporte.json  ejemplo_vitalinux_completo.json  equipment_check.py  equipment_check_bootstrap.py  equipment_check_bootstrap_simple.py  equipment_check_simple.py  equipment_check_styled.py  gui.py  index.html  justfile  main.py  migas_verificacion_equipos_20251023_103849.json  migas_verificacion_equipos_20251023_103919.json  migas_verificacion_equipos_20251023_104620.json  package-lock.json  package.json  pyproject.toml  release.sh  run.py  run_equipment_check.py  run_fullscreen.py  run_migas_app.py  script.js  setup.sh  (+7 more)
.github/workflows/: release.yml
src-tauri/: Cargo.toml  desktop-template.desktop  tauri.conf.json
src-tauri/autostart/: vx-dga-pc-check-form.desktop  vx-pc-check-form.desktop
src-tauri/src/: main.rs
