[project]
name = "scripts"
version = "0.1.0"
description = "Una aplicación CLI potente con Typer e interfaz gráfica tkinter"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.9.0",
    "rich>=10.0.0",
    "click>=8.0.0",
    "ttkbootstrap>=1.16.0",
    "pyinstaller>=6.16.0",
]
